# read

./: .gitignore  Cargo.toml  README.md  file.txt
src/: Cli.rs  context.rs  file_read.rs  main.rs  terminal_display.rs
src/config/: config.rs
src/display/: mod.rs  terminal_display.rs
src/input/: cli.rs  event.rs  mod.rs
