[package]
name = "read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
serde = {version = "1.0.192", features=["derive"]}
serde_json = "1.0.108"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
