[package]
name = "read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
serde = {version = "1.0.192", features=["derive"]}
serde_json = "1.0.108"
time = { version = "0.3.30", features = ["macros"]}
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["time", "local-time"]}


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
